--- a/.env-sample
+++ b/.env-sample
@@ -1,7 +1,12 @@
 # SERVER
 PORT=3000
 
-
+# DATABASE
+DB_HOST="localhost"
+DB_PORT=5432
+DB_NAME="clinicReservation"
+DB_USERNAME="postgres"
+DB_PASSWORD="root"
 
 
 
