--- a/.env-sample
+++ b/.env-sample
@@ -8,5 +8,10 @@ DB_NAME="clinicReservation"
 DB_USERNAME="postgres"
 DB_PASSWORD="root"
 
+# SECRETS
+COOKIE_SECRET="YOUR COOKIE SECRET KEY"
+OTP_TOKEN_SECRET="YOUR OTP SECRET KEY"
+ACCESS_TOKEN_SECRET="YOUR ACCESS TOKEN SECRET KEY"
+PHONE_TOKEN_SECRET= "YOUR PHONE TOKEN SECRET KEY"
 
 
